--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,23 +4,23 @@
   "version": "0.1.0",
   "manifest_version": 2,
   "icons": {
-    "128": "icon128.png",
-    "32": "icon32.png",
-    "48": "icon48.png",
-    "16": "icon16.png"
+    "128": "assets/img/icon128.png",
+    "32": "assets/img/icon32.png",
+    "48": "assets/img/icon48.png",
+    "16": "assets/img/icon16.png"
   },
   "permissions": [
-    "activeTab","tabs","background","alarms","history","storage"
+    "activeTab","tabs","background","alarms","history","storage","contextMenus"
   ],
   "content_scripts": [{
     "matches":["<all_urls>"],
  "js": ["content.js"]
 }],
 "background" : {
-  "scripts": ["background.js"]
+  "scripts": ["background.js","context.js"]
 },
 "browser_action": {
-  "default_icon": "icon16.png",
+  "default_icon": "assets/img/icon16.png",
   "default_popup": "popup.html"
 }
 }
