--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,12 +14,19 @@
   ],
   "content_scripts": [{
     "matches":["<all_urls>"],
- "js": ["content.js"]
-}],
-"background" : {
+    "js": ["content.js"]
+},
+{"matches":["www.google.com/search"],
+  "js":["injector.js"]
+}
+],
+  "background" : {
   "scripts": ["background.js","context.js"]
 },
-"browser_action": {
+  "web_accessible_resources": [
+  "script.js"
+],
+  "browser_action": {
   "default_icon": "assets/img/icon16.png",
   "default_popup": "popup.html"
 }
