--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -15,10 +15,11 @@
   "content_scripts": [{
     "matches":["<all_urls>"],
     "js": ["content.js"]
-},
-{"matches":["www.google.com/search"],
-  "js":["injector.js"]
-}
+  },
+  { "matches":["*://www.google.com/*"],
+      "js":["injector.js"]
+  }
+
 ],
   "background" : {
   "scripts": ["background.js","context.js"]
