--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -34,7 +34,7 @@
   "scripts": ["background.js","context.js"]
 },
   "web_accessible_resources": [
-  "script.js",
+  "script.js"
 ],
   "browser_action": {
   "default_icon": "assets/img/icon16.png",
